Added extra symbols to documentVisualListsAreMarkedUp per #116.

--- a/test/accessibility-tests/documentVisualListsAreMarkedUp.html
+++ b/test/accessibility-tests/documentVisualListsAreMarkedUp.html
@@ -20,7 +20,7 @@
 	<div class="quail-test" data-expected="pass" data-accessibility-test="documentVisualListsAreMarkedUp">
 
 		<p>
-			Our ice-cream flavours include chocolate, vanilla, cherry, and bananna.
+			Our ice-cream flavours include chocolate*, vanilla, cherry, and bananna.
 		</p>
 	</div>
 	<div class="quail-test" data-expected="pass" data-accessibility-test="documentVisualListsAreMarkedUp">
