Added more symbols to documentVisualListsAreMarkedUp

--- a/test/accessibility-tests/documentVisualListsAreMarkedUp.html
+++ b/test/accessibility-tests/documentVisualListsAreMarkedUp.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+<meta charset="utf-8">
 <head>
 	<title>documentVisualListsAreMarkedUp</title>
 </head>
@@ -17,12 +18,65 @@
 			<br/>
 		</p>
 	</div>
+	<div class="quail-test" data-expected="fail" data-accessibility-test="documentVisualListsAreMarkedUp">
+
+		<p class="quail-failed-element">
+			1. chocolate
+			<br/>
+			2. vanilla
+			<br/>
+			3. cherry
+			<br/>
+			4. bananna
+			<br/>
+		</p>
+	</div>
+	<div class="quail-test" data-expected="fail" data-accessibility-test="documentVisualListsAreMarkedUp">
+
+		<p class="quail-failed-element">
+			I. chocolate
+			<br/>
+			II. vanilla
+			<br/>
+			IV. cherry
+			<br/>
+			IX. bananna
+			<br/>
+		</p>
+	</div>
+	<div class="quail-test" data-expected="fail" data-accessibility-test="documentVisualListsAreMarkedUp">
+
+		<p class="quail-failed-element">
+			1) chocolate
+			<br/>
+			2) vanilla
+			<br/>
+			3) cherry
+			<br/>
+			4) bananna
+			<br/>
+		</p>
+	</div>
+	<div class="quail-test" data-expected="fail" data-accessibility-test="documentVisualListsAreMarkedUp">
+
+		<p class="quail-failed-element">
+			▶ chocolate
+			<br/>
+			* vanilla
+			<br/>
+			♦ cherry
+			<br/>
+			♦ bananna
+			<br/>
+		</p>
+	</div>	
 	<div class="quail-test" data-expected="pass" data-accessibility-test="documentVisualListsAreMarkedUp">
 
 		<p>
-			Our ice-cream flavours include chocolate*, vanilla, cherry, and bananna.
+			Our ice-cream flavours include chocolate*, vanilla*, cherry, and bananna.
 		</p>
 	</div>
+
 	<div class="quail-test" data-expected="pass" data-accessibility-test="documentVisualListsAreMarkedUp">
 
 		<ul>
