--- a/test/accessibility-tests/videosEmbeddedOrLinkedNeedCaptions.html
+++ b/test/accessibility-tests/videosEmbeddedOrLinkedNeedCaptions.html
@@ -10,6 +10,12 @@
 			<a href="http://www.youtube.com/watch?v=V1HSNV9y25A" class="quail-failed-element">Out this awesome video.</a>
 		</p>
 	</div>
+	<div class="quail-test" data-expected="fail" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions">
+
+		<video controls class="quail-failed-element">
+			<source src="sample.ogv" type="video/ogv"/>
+		</video>
+	</div>
 
 	<div class="quail-test" data-expected="pass" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions">
 		<p>
@@ -20,6 +26,13 @@
 			There's also
 			<a href="http://youtube.com/help">another link to throw you off.</a>
 		</p>
+	</div>
+	<div class="quail-test" data-expected="pass" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions">
+
+		<video controls>
+			<source src="sample.ogv" type="video/ogv"/>
+			<track kind="subtitles" src="sampleSubtitles_en.srt" srclang="en"></track>
+		</video>
 	</div>
 
 	<script src="../testrunner.js"></script>
