--- a/test/accessibility-tests/videosEmbeddedOrLinkedNeedCaptions.html
+++ b/test/accessibility-tests/videosEmbeddedOrLinkedNeedCaptions.html
@@ -3,24 +3,32 @@
 <head>
 	<title>videosEmbeddedOrLinkedNeedCaptions</title>
 </head>
-<body>
+<body lang="en">
 	<div class="quail-test" data-expected="fail" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions">
 		<p>
 			Hey, check
 			<a href="http://www.youtube.com/watch?v=V1HSNV9y25A" class="quail-failed-element">Out this awesome video.</a>
 		</p>
 	</div>
-	<div class="quail-test" data-expected="fail" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions">
+	<div class="quail-test" data-expected="fail" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions" title="No Subtitle">
 		<video controls class="quail-failed-element">
 			<source src="../assets/sample.ogv" type="video/ogv"/>
 		</video>
 	</div>
 
-	<div class="quail-test" data-expected="fail" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions">
+	<div class="quail-test limit-chrome" data-expected="fail" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions" title="Subtitle file missing">
 
 		<video controls class="quail-failed-element">
 			<source src="../assets/sample.ogv" type="video/ogv"/>
 			<track kind="subtitles" src="../assets/broken.srt" srclang="en"></track>
+		</video>
+	</div>
+
+	<div class="quail-test" data-expected="fail" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions" lang="fr" title="Subtitle not matching language">
+
+		<video controls class="quail-failed-element">
+			<source src="../assets/sample.ogv" type="video/ogv"/>
+			<track kind="subtitles" src="../assets/subtitle.srt" srclang="en"></track>
 		</video>
 	</div>
 
@@ -35,7 +43,7 @@
 		</p>
 
 	</div>
-	<div class="quail-test" data-expected="pass" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions">
+	<div class="quail-test limit-chrome" data-expected="pass" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions" title="Video tag has correct subtitle">
 
 		<video controls>
 			<source src="../assets/sample.ogv" type="video/ogv"/>
