--- a/test/accessibility-tests/videosEmbeddedOrLinkedNeedCaptions.html
+++ b/test/accessibility-tests/videosEmbeddedOrLinkedNeedCaptions.html
@@ -32,6 +32,16 @@
 		</video>
 	</div>
 
+	<div class="quail-test limit-chrome" data-expected="fail" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions" title="Object with no subtitles">
+		<object id="movie-contentblock-0120192e-2452-4d96-9ba7-8a004d1415bf" width="100%" height="100%" type="application/x-shockwave-flash" data="/behaviour/flash/govvid-v2-mediaplayer.swf" bgcolor="#000000" name="movie-contentblock-0120192e-2452-4d96-9ba7-8a004d1415bf" tabindex="0" class="quail-failed-element">
+		<param name="allowfullscreen" value="true">
+		<param name="allowscriptaccess" value="always">
+		<param name="seamlesstabbing" value="true">
+		<param name="wmode" value="opaque">
+		<param name="flashvars" value="netstreambasepath=http%3A%2F%2Fwww.rijksoverheid.nl%2Fdocumenten-en-publicaties%2Fvideos%2F2014%2F01%2F24%2Fpersconferentie-na-ministerraad-24-januari-2014.html&id=movie-contentblock-0120192e-2452-4d96-9ba7-8a004d1415bf&className=govvid&file=http%3A%2F%2Fserver.rijksoverheidsvideo.nl%2Fflash%2FMP-240114-5081.flv&image=http%3A%2F%2Fserver.rijksoverheidsvideo.nl%2Ffoto%2FMP-240114-5081.jpg&skin=%2Fbehaviour%2Fflash%2Fgovvid-v2-skin-video.zip&stretching=exactfit&plugins=http%3A%2F%2Fwww.rijksoverheid.nl%2Fbehaviour%2Fflash%2Fcaptions.swf%2Chttp%3A%2F%2Fwww.rijksoverheid.nl%2Fbehaviour%2Fflash%2Faudiodescription.swf&captions.state=false&captions.fontsize=16&captions.pluginmode=FLASH&audiodescription.file=http%3A%2F%2Fserver.rijksoverheidsvideo.nl%2Faudio%2FMP-240114-5081.mp3&audiodescription.state=false&audiodescription.pluginmode=FLASH&controlbar.position=bottom&playlist.position=none&dock=false">
+		</object>
+	</div>
+
 	<div class="quail-test" data-expected="pass" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions">
 		<p>
 			Hey, check
@@ -50,7 +60,15 @@
 			<track kind="subtitles" src="../assets/subtitle.srt" srclang="en"></track>
 		</video>
 	</div>
-
+	<div class="quail-test limit-chrome" data-expected="pass" data-accessibility-test="videosEmbeddedOrLinkedNeedCaptions" title="Object with subtitles">
+		<object id="movie-contentblock-0120192e-2452-4d96-9ba7-8a004d1415bf" width="100%" height="100%" type="application/x-shockwave-flash" data="/behaviour/flash/govvid-v2-mediaplayer.swf" bgcolor="#000000" name="movie-contentblock-0120192e-2452-4d96-9ba7-8a004d1415bf" tabindex="0">
+		<param name="allowfullscreen" value="true">
+		<param name="allowscriptaccess" value="always">
+		<param name="seamlesstabbing" value="true">
+		<param name="wmode" value="opaque">
+		<param name="flashvars" value="netstreambasepath=http%3A%2F%2Fwww.rijksoverheid.nl%2Fdocumenten-en-publicaties%2Fvideos%2F2014%2F01%2F24%2Fpersconferentie-na-ministerraad-24-januari-2014.html&id=movie-contentblock-0120192e-2452-4d96-9ba7-8a004d1415bf&className=govvid&file=http%3A%2F%2Fserver.rijksoverheidsvideo.nl%2Fflash%2FMP-240114-5081.flv&image=http%3A%2F%2Fserver.rijksoverheidsvideo.nl%2Ffoto%2FMP-240114-5081.jpg&skin=%2Fbehaviour%2Fflash%2Fgovvid-v2-skin-video.zip&stretching=exactfit&plugins=http%3A%2F%2Fwww.rijksoverheid.nl%2Fbehaviour%2Fflash%2Fcaptions.swf%2Chttp%3A%2F%2Fwww.rijksoverheid.nl%2Fbehaviour%2Fflash%2Faudiodescription.swf&captions.file=http%3A%2F%2Fserver.rijksoverheidsvideo.nl%2Fondertiteling%2FMP-240114-5081.srt&captions.state=false&captions.fontsize=16&captions.pluginmode=FLASH&audiodescription.file=http%3A%2F%2Fserver.rijksoverheidsvideo.nl%2Faudio%2FMP-240114-5081.mp3&audiodescription.state=false&audiodescription.pluginmode=FLASH&controlbar.position=bottom&playlist.position=none&dock=false">
+		</object>
+	</div>
 	<script src="../testrunner.js"></script>
 </body>
 </html>
