--- a/test/unit/testLibs.html
+++ b/test/unit/testLibs.html
@@ -5,9 +5,9 @@
   <title>Guideline class unit tests</title>
   <link rel="stylesheet" href="../../lib/qunit/qunit.css" media="screen">
   <link rel="stylesheet" href="../test.css" media="screen">
-  <script src="../../../lib/jquery/jquery.js"></script>
+  <script src="../../lib/jquery/jquery.js"></script>
   <script src="../quail-testing.jquery.js"></script>
-  <script src="../../../lib/qunit/qunit.js"></script>
+  <script src="../../lib/qunit/qunit.js"></script>
 </head>
 
 <body>
