Added unicode symbols block to documentVisualListsAreMarkedUp. #116

--- a/test/accessibility-tests/documentVisualListsAreMarkedUp.html
+++ b/test/accessibility-tests/documentVisualListsAreMarkedUp.html
@@ -21,6 +21,19 @@
 	<div class="quail-test" data-expected="fail" data-accessibility-test="documentVisualListsAreMarkedUp">
 
 		<p class="quail-failed-element">
+			◤ chocolate
+			<br/>
+			◤ vanilla
+			<br/>
+			◤ cherry
+			<br/>
+			◤ bananna
+			<br/>
+		</p>
+	</div>
+	<div class="quail-test" data-expected="fail" data-accessibility-test="documentVisualListsAreMarkedUp">
+
+		<p class="quail-failed-element">
 			1. chocolate
 			<br/>
 			2. vanilla
