--- a/test/accessibility-tests/aImgAltNotRepetative.html
+++ b/test/accessibility-tests/aImgAltNotRepetative.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 	<head>
-		<title>aImgAltNotRepetative</title>
+		<title>aImgAltNotRepetitive</title>
 	</head>
 	<body>
 		<div class="quail-test" data-expected="pass" data-accessibility-test="imgHasAlt">
 			<a href="page1.html"><img src="../assets/rex.jpg" alt=""/>page1</a>
 		</div>
 
-		<div class="quail-test" data-expected="fail" data-accessibility-test="aImgAltNotRepetative">
+		<div class="quail-test" data-expected="fail" data-accessibility-test="aImgAltNotRepetitive">
 		  <a href="page1.html" class="quail-failed-element"><img src="../assets/rex.jpg" alt="page1"/>page1</a>
 		</div>
 
