--- a/test/accessibility-tests/aLinksToMultiMediaRequireTranscript.html
+++ b/test/accessibility-tests/aLinksToMultiMediaRequireTranscript.html
@@ -4,19 +4,27 @@
 		<title>aLinksToMultiMediaRequireTranscript</title>
 	</head>
 	<body>
-		<div class="quail-test" data-expected="pass" data-accessibility-test="aLinksToMultiMediaRequireTranscript">
-		  
-		</div>
+		<div class="quail-test" data-expected="pass" data-accessibility-test="aLinksToMultiMediaRequireTranscript"></div>
 
 		<div class="quail-test" data-expected="fail" data-accessibility-test="aLinksToMultiMediaRequireTranscript">
 			<p>View <a href="movie.mpg" class="quail-failed-element">the movie</a>.</p>
+		</div>
+
+		<div class="quail-test" data-expected="fail" data-accessibility-test="aLinksToMultiMediaRequireTranscript">
 			<p>View <a href="movie.mov" class="quail-failed-element">the movie</a>.</p>
+		</div>
+
+		<div class="quail-test" data-expected="fail" data-accessibility-test="aLinksToMultiMediaRequireTranscript">
 			<p>View <a href="movie.ram" class="quail-failed-element">the movie</a>.</p>
+		</div>
+
+		<div class="quail-test" data-expected="fail" data-accessibility-test="aLinksToMultiMediaRequireTranscript">
 			<p>View <a href="movie.aif" class="quail-failed-element">the movie</a>.</p>
+		</div>
+
+		<div class="quail-test" data-expected="fail" data-accessibility-test="aLinksToMultiMediaRequireTranscript">
 			<p>View <a href="movie.wmv" class="quail-failed-element">the movie</a>.</p>
 		</div>
-		  
-
 
 		<script src="../testrunner.js"></script>	</body>
 </html>
