--- a/test/accessibility-tests/aSuspiciousLinkText.html
+++ b/test/accessibility-tests/aSuspiciousLinkText.html
@@ -4,6 +4,10 @@
 		<title>aSuspiciousLinkText</title>
 	</head>
 	<body>
+		<div class="quail-test" data-expected="notApplicable" data-accessibility-test="aSuspiciousLinkText">
+			<a name="anchor"></a>
+		</div>
+
 		<div class="quail-test" data-expected="pass" data-accessibility-test="aSuspiciousLinkText">
 		  <p>Here is a link to <a href="dogs.html">information about dogs</a>.</p>
 		</div>
