--- a/test/accessibility-tests/aLinksNotSeparatedBySymbols.html
+++ b/test/accessibility-tests/aLinksNotSeparatedBySymbols.html
@@ -9,20 +9,16 @@
 		<a href="dogs" class="quail-failed-element">dogs</a>
 		|
 		<a href="cats" class="quail-failed-element">cats</a>
-		*
-		<a href="birds" class="quail-failed-element">birds</a>
-		|
-		<a
-        href="snakes">snakes</a>
 	</div>
-	<div class="quail-test" data-expected="pass" data-accessibility-test="aLinksNotSeparatedBySymbols">
 
+	<div class="quail-test" data-expected="pass" data-accessibility-test="aLinksNotSeparatedBySymbols">
 		<a href="dogs">dogs</a>
 		<a href="cats">cats</a>
-		text
+	</div>
+
+	<div class="quail-test" data-expected="pass" data-accessibility-test="aLinksNotSeparatedBySymbols">
 		<a href="birds">birds</a>
-		more
-        text
+		text
 		<a href="snakes">snakes</a>
 	</div>
 
