--- a/test/accessibility-tests/definitionListsAreUsed.html
+++ b/test/accessibility-tests/definitionListsAreUsed.html
@@ -10,7 +10,6 @@
 </head>
 <body>
 	<div class="quail-test" data-expected="fail" data-accessibility-test="definitionListsAreUsed">
-
 		<ul>
 			<li class="quail-failed-element"><strong>Term A</strong> - Definition for term A</li>
 			<li class="quail-failed-element"><strong>Term B</strong> - Definition for term B</li>
@@ -23,13 +22,12 @@
 		</ul>
 	</div>
 	<div class="quail-test" data-expected="pass" data-accessibility-test="definitionListsAreUsed">
-
 		<ul>
 			<li>Definition for term A</li>
 			<li>Definition for term B</li>
 		</ul>
 	</div>
-	<div class="quail-test" data-expected="pass" data-accessibility-test="definitionListsAreUsed">
+	<div class="quail-test" data-expected="notApplicable" data-accessibility-test="definitionListsAreUsed">
 		<dl>
 			<dt>Term A</dt>
 			<dd>Definition for term A</dd>
