--- a/test/accessibility-tests/documentLangIsISO639Standard-fail.html
+++ b/test/accessibility-tests/documentLangIsISO639Standard-fail.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html  class="quail-test self-fail" data-expected="pass" data-accessibility-test="appletsDoNotFlicker" lang="no-language">
-    
+<html class="quail-test self-fail" data-expected="fail" data-accessibility-test="documentLangIsISO639Standard" lang="no-language">
+
     <head>
         <title>documentLangIsISO639Standard-fail</title>
     </head>
-    
+
     <body>
         <p>This document is missing a standard language code.</p>
         <script src="../testrunner.js"></script>
