--- a/test/accessibility-tests/documentLangIsISO639Standard-pass.html
+++ b/test/accessibility-tests/documentLangIsISO639Standard-pass.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html  class="quail-test self-fail" data-expected="pass" data-accessibility-test="appletsDoNotFlicker" lang="en">
-    
+<html  class="quail-test self-fail" data-expected="pass" data-accessibility-test="documentLangIsISO639Standard" lang="en">
+
     <head>
         <title>documentLangIsISO639Standard-fail</title>
     </head>
-    
+
     <body>
         <p>This document is missing a standard language code.</p>
         <script src="../testrunner.js"></script>
