The header component is fixed.
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/test/accessibility-tests/headerH1.html
+++ b/test/accessibility-tests/headerH1.html
@@ -4,7 +4,7 @@
 	<title>headerH1</title>
 </head>
 <body>
-	<div class="quail-test" data-expected="fail" data-accessibility-test="headerH1">
+	<div class="quail-test" data-expected="h1:ignore|h3:fail" data-accessibility-test="headerH1">
 
 		<h1>The First Heading</h1>
 
@@ -14,7 +14,7 @@
 
 		<p>Here is some more demo text.</p>
 	</div>
-	<div class="quail-test" data-expected="pass" data-accessibility-test="headerH1">
+	<div class="quail-test" data-expected="h1:ignore|h2:pass" data-accessibility-test="headerH1">
 
 		<h1>The First Heading</h1>
 
