--- a/test/accessibility-tests/headerH4.html
+++ b/test/accessibility-tests/headerH4.html
@@ -4,20 +4,20 @@
 	<title>headerH4</title>
 </head>
 <body>
-	<div class="quail-test" data-expected="fail" data-accessibility-test="headerH4">
+	<div class="quail-test" data-expected="h4:ignore|h6:fail" data-accessibility-test="headerH4">
 
 		<h4>The First Heading</h4>
 
 		<h6 class="quail-failed-element">The Second Heading</h6>
 	</div>
-	<div class="quail-test" data-expected="pass" data-accessibility-test="headerH4">
+	<div class="quail-test" data-expected="h4:ignore|h2:pass" data-accessibility-test="headerH4">
 
 		<h4>The First Heading</h4>
 		<p>The first paragraph</p>
 
 		<h2>The Second Heading</h2>
 	</div>
-	<div class="quail-test" data-expected="pass" data-accessibility-test="headerH4">
+	<div class="quail-test" data-expected="h5:ignore|h6:pass" data-accessibility-test="headerH4">
 
 		<h5>The First Heading</h5>
 		<p>The first paragraph</p>
