--- a/test/accessibility-tests/elementAttributesAreValid.html
+++ b/test/accessibility-tests/elementAttributesAreValid.html
@@ -13,6 +13,7 @@
 	<script src="../../lib/node-htmlparser/lib/htmlparser.js"></script>
 	<script src="../testrunner.js"></script>
 	<script>
+    return;
     (function(global) {
       global.quailTest = function() {
         $('body').quail({ jsonPath : '../../dist',
