--- a/test/accessibility-tests/preShouldNotBeUsedForTabularLayout.html
+++ b/test/accessibility-tests/preShouldNotBeUsedForTabularLayout.html
@@ -13,7 +13,7 @@ small 5     7
 		</pre>
 	</div>
 	<div class="quail-test" data-expected="pass" data-accessibility-test="preShouldNotBeUsedForTabularLayout">
-		<p>No pre tag here.</p>
+		<pre>No table here</pre>
 	</div>
 
 	<script src="../testrunner.js"></script>
