Changed to split expectation for the moment.

--- a/test/accessibility-tests/documentIDsMustBeUnique.html
+++ b/test/accessibility-tests/documentIDsMustBeUnique.html
@@ -7,13 +7,13 @@
   <div class="quail-test" data-expected="notApplicable" data-accessibility-test="documentIDsMustBeUnique">
     <p>This paragraph has no ID</p>
   </div>
-  <div class="quail-test" data-expected="fail" data-accessibility-test="documentIDsMustBeUnique">
-    <p id="one">This is the first paragraph.</p>
+  <div class="quail-test" data-expected="h2:ignore|h4:fail" data-accessibility-test="documentIDsMustBeUnique">
+    <h2 id="one">This is a header.</h2>
     <p id="one" class="quail-failed-element">This is the second paragraph.</p>
   </div>
-  <div class="quail-test" data-expected="pass" data-accessibility-test="documentIDsMustBeUnique">
-    <p id="one">This is the first paragraph.</p>
-    <p id="two">This is the second paragraph.</p>
+  <div class="quail-test" data-expected="h2:pass|p:pass" data-accessibility-test="documentIDsMustBeUnique">
+    <h2 id="three">This is a header.</h2>
+    <p id="four" class="quail-failed-element">This is the second paragraph.</p>
   </div>
 
   <script src="../testrunner.js"></script>
