--- a/test/accessibility-tests/idRefHasCorrespondingId.html
+++ b/test/accessibility-tests/idRefHasCorrespondingId.html
@@ -9,8 +9,8 @@
 		<div id="wrong">This DIV has an ID of "wrong"</div>
 	</div>
 	<div class="quail-test" data-expected="pass" data-accessibility-test="idRefHasCorrespondingId" title="Div ID matches idref">
-		<a href="something.html" idref="target">Link</a>
-		<div id="target">This DIV has an ID of "wrong"</div>
+		<a href="something.html" idref="target2">Link</a>
+		<div id="target2">This DIV has an ID of "wrong"</div>
 	</div>
 
 	<script src="../testrunner.js"></script>
