Converted the core quailBuilderTests.
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/test/core/quailBuilderTests.html
+++ b/test/core/quailBuilderTests.html
@@ -16,8 +16,8 @@
   <script>
     (function(global) {
       global.quailTest = function() {
-        test('Test that a defined quailBuilderTests variable can set configuration.', function() {
-          var testResults = [];
+        asyncTest('Test that a defined quailBuilderTests variable can set configuration.', function() {
+          expect(1);
           window.quailBuilderTests = {
             quailBuilderTest : {
               type : 'selector',
@@ -26,15 +26,15 @@
               }
             }
           };
-          $('.test-area').quail({ jsonPath : '../../dist',
-                              reset : true,
-                              complete : function(results) {
-                                testResults = results.results;
-                              }});
-          equal(true, testResults.quailBuilderTest.elements[0].is('p'), 'Found paragraph with selector');
+          $('.test-area').quail({
+            complete : function(eventName, thisTest, _case) {
+              ok($(_case.get('element')).is('p'), 'Found paragraph with selector');
+              start();
+            }
+          });
         });
       };
-    })(this);
+    }(this));
   </script>
 </body>
 
